--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-export AWS_ACCESS_KEY_ID=
-export AWS_SECRET_ACCESS_KEY=
-# export DEBUG=
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+DEBUG=1
