--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
