--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "node-fetch": "^2.6.1"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
